--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.3",
+    "npm": "^8.6.0",
     "pg": "^8.7.3",
     "request-promise": "^4.2.6",
     "sequelize": "^6.18.0",
