--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.7.3",
     "request-promise": "^4.2.6",
     "sequelize": "^6.18.0",
+    "socket.io": "^4.4.1",
     "sqlite3": "^5.0.2"
   }
 }
