--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test jest --coverage --verbose"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "install": "^0.13.0",
+    "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
     "npm": "^8.6.0",
@@ -32,6 +33,7 @@
     "request-promise": "^4.2.6",
     "sequelize": "^6.18.0",
     "socket.io": "^4.4.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.2.2"
   }
 }
