--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node index.js",
-    "test": "NODE_ENV=test jest --coverage --verbose"
+    "test": "NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
